# high-performance-streaming-pipeline

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  market_data.proto
cmd/aggregator/: main.cpp
cmd/producer/: main.cpp
cmd/snapshot/: main.cpp
